--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"element-plus": "^2.3.8",
 		"file-saver": "^2.0.5",
 		"pinia": "^2.1.4",
-		"vue": "^3.3.4"
+		"vue": "^3.3.4",
+		"vue3-touch-events": "^4.1.3"
 	},
 	"devDependencies": {
 		"jszip": "3.7.1",
