--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "onlineGallery",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "./src/main.ts",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
@@ -11,28 +11,29 @@
   "license": "MIT",
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
-    "@vitejs/plugin-vue": "^4.2.3",
     "@vueuse/core": "^10.2.1",
     "ant-design-vue": "^4.0.0",
     "element-plus": "^2.3.8",
     "file-saver": "^2.0.5",
     "pinia": "^2.1.4",
-    "tsc": "^2.0.4",
-    "typescript": "^5.1.6",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
     "vue3-touch-events": "^4.1.3"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.11",
+    "@types/node": "^20.4.3",
+    "@vitejs/plugin-vue": "^4.2.3",
     "jszip": "3.7.1",
-    "less": "^4.1.3",
+    "path": "^0.12.7",
     "sass": "^1.63.6",
+    "typescript": "^5.1.6",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.3",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-monkey": "^3.3.1"
+    "vite-plugin-monkey": "^3.3.1",
+    "vue-tsc": "^1.8.6"
   }
 }
