--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@fancyapps/ui": "^5.0.20",
     "@vueuse/core": "^10.2.1",
     "ant-design-vue": "^4.0.0",
     "element-plus": "^2.3.8",
