--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/main.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vue-tsc && vite build"
   },
   "author": "",
   "license": "MIT",
