--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
 		"@vue/tsconfig": "^0.5.1",
 		"eslint": "^8.49.0",
 		"eslint-plugin-vue": "^9.17.0",
+		"file-saver": "^2.0.5",
+		"jszip": "^3.10.1",
 		"less": "^4.2.0",
 		"npm-run-all2": "^6.1.2",
 		"postcss-modules": "^6.0.0",
 		"postcss-preset-env": "^9.5.5",
 		"terser": "^5.30.3",
-		"ts-node": "^10.9.2",
 		"typescript": "~5.4.0",
 		"unplugin-auto-import": "^0.17.5",
 		"unplugin-vue-components": "^0.26.0",
