--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "onlinegallery-reset-2024-04",
 	"version": "0.0.0",
 	"private": true,
+	"author": "",
+	"license": "MIT",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -26,6 +28,7 @@
 		"@mdi/font": "^7.4.47",
 		"@rushstack/eslint-patch": "^1.3.3",
 		"@tsconfig/node20": "^20.1.2",
+		"@types/file-saver": "^2.0.7",
 		"@types/lodash": "^4.17.0",
 		"@types/node": "^20.11.28",
 		"@varlet/import-resolver": "^3.2.3",
@@ -33,6 +36,7 @@
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vue/eslint-config-typescript": "^12.0.0",
 		"@vue/tsconfig": "^0.5.1",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.49.0",
 		"eslint-plugin-vue": "^9.17.0",
 		"file-saver": "^2.0.5",
@@ -40,6 +44,7 @@
 		"less": "^4.2.0",
 		"npm-run-all2": "^6.1.2",
 		"postcss-modules": "^6.0.0",
+		"postcss-prefixer": "^3.0.0",
 		"postcss-preset-env": "^9.5.5",
 		"terser": "^5.30.3",
 		"typescript": "~5.4.0",
@@ -51,5 +56,9 @@
 		"vite-plugin-vue-devtools": "^7.0.26",
 		"vite-svg-loader": "^5.1.0",
 		"vue-tsc": "^2.0.6"
-	}
+	},
+	"browsers": [
+		"last 2 versions",
+		"> 2%"
+	]
 }
