修复图片跨域问题

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "onlinegallery-reset-2024-04",
-	"version": "0.0.0",
+	"name": "WebImgCollector2",
+	"version": "0.1.0",
 	"private": true,
 	"author": "",
 	"license": "MIT",
@@ -17,6 +17,8 @@
 		"@fancyapps/ui": "^5.0.35",
 		"@varlet/ui": "^3.2.3",
 		"@vueuse/core": "^10.9.0",
+		"file-saver": "^2.0.5",
+		"jszip": "3.7.1",
 		"gsap": "^3.12.5",
 		"lodash": "^4.17.21",
 		"pinia": "^2.1.7",
@@ -39,8 +41,6 @@
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.49.0",
 		"eslint-plugin-vue": "^9.17.0",
-		"file-saver": "^2.0.5",
-		"jszip": "^3.10.1",
 		"less": "^4.2.0",
 		"npm-run-all2": "^6.1.2",
 		"postcss-modules": "^6.0.0",
