--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 		"@varlet/ui": "^3.2.3",
 		"@vueuse/core": "^10.9.0",
 		"file-saver": "^2.0.5",
-		"jszip": "3.7.1",
 		"gsap": "^3.12.5",
+		"jszip": "3.7.1",
 		"lodash": "^4.17.21",
 		"pinia": "^2.1.7",
 		"vue": "^3.4.21",
@@ -28,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@mdi/font": "^7.4.47",
+		"@mdi/js": "^7.4.47",
 		"@rushstack/eslint-patch": "^1.3.3",
 		"@tsconfig/node20": "^20.1.2",
 		"@types/file-saver": "^2.0.7",
