--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"postcss-modules": "^6.0.0",
 		"postcss-prefixer": "^3.0.0",
 		"postcss-preset-env": "^9.5.5",
+		"rollup-plugin-visualizer": "^5.12.0",
 		"terser": "^5.30.3",
 		"typescript": "~5.4.0",
 		"unplugin-auto-import": "^0.17.5",
@@ -55,6 +56,7 @@
 		"vite-plugin-iconify": "^0.2.0",
 		"vite-plugin-monkey": "^3.5.2",
 		"vite-plugin-vue-devtools": "^7.0.26",
+		"vite-plugin-vuetify": "^2.0.3",
 		"vite-svg-loader": "^5.1.0",
 		"vue-tsc": "^2.0.6"
 	},
