--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onlineGallery",
+  "name": "WebImgCollector",
   "version": "1.0.0",
   "description": "",
   "main": "./src/main.ts",
