--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.1",
 		"@fancyapps/ui": "^5.0.35",
 		"@varlet/ui": "^3.2.3",
 		"@vueuse/core": "^10.9.0",
+		"element-plus": "^2.7.1",
 		"file-saver": "^2.0.5",
 		"gsap": "^3.12.5",
 		"jszip": "3.7.1",
@@ -27,6 +29,7 @@
 		"vuetify": "^3.5.14"
 	},
 	"devDependencies": {
+		"@iconify-json/ep": "^1.1.11",
 		"@mdi/font": "^7.4.47",
 		"@mdi/js": "^7.4.47",
 		"@rushstack/eslint-patch": "^1.3.3",
@@ -48,12 +51,13 @@
 		"postcss-prefixer": "^3.0.0",
 		"postcss-preset-env": "^9.5.5",
 		"rollup-plugin-visualizer": "^5.12.0",
+		"sass": "^1.75.0",
 		"terser": "^5.30.3",
 		"typescript": "~5.4.0",
 		"unplugin-auto-import": "^0.17.5",
+		"unplugin-icons": "^0.18.5",
 		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.1.6",
-		"vite-plugin-iconify": "^0.2.0",
 		"vite-plugin-monkey": "^3.5.2",
 		"vite-plugin-vue-devtools": "^7.0.26",
 		"vite-plugin-vuetify": "^2.0.3",
