--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,12 @@
 {
 	"extends": "@vue/tsconfig/tsconfig.dom.json",
-	"include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.ts", "taskQueue.ts"],
+	"include": [
+		"env.d.ts",
+		"src/**/*",
+		"src/**/*.vue",
+		"src/**/*.ts",
+		"taskQueue.ts"
+	],
 	"exclude": ["src/**/__tests__/*"],
 	"compilerOptions": {
 		"declaration": true,
@@ -14,6 +20,7 @@
 		"paths": {
 			"@/*": ["./src/*"],
 			"@svg/*": ["./src/assets/svg/*"]
-		}
+		},
+		"types": ["element-plus/global"]
 	}
 }
