--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,18 +1,11 @@
 {
 	"extends": "@vue/tsconfig/tsconfig.dom.json",
-	"include": [
-		"env.d.ts",
-		"src/**/*",
-		"src/**/*.vue",
-		"src/**/*.ts",
-		"taskQueue.ts"
-	],
+	"include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.ts"],
 	"exclude": ["src/**/__tests__/*"],
 	"compilerOptions": {
+		"composite": true,
 		"declaration": true,
 		"declarationDir": "./types", // ts类型文件的输出目录
-		"composite": true,
-		"noEmit": false,
 		"outDir": "./temp", // TS的编译结果js文件的输出路径
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
