--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jszip": "3.7.1",
     "path": "^0.12.7",
     "sass": "^1.63.6",
+    "terser": "^5.31.0",
     "typescript": "^5.1.6",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.16.5",
