--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"devDependencies": {
 		"@iconify-json/ant-design": "^1.1.16",
 		"@iconify-json/ep": "^1.1.11",
+		"@iconify-json/material-symbols": "^1.1.80",
 		"@mdi/font": "^7.4.47",
 		"@mdi/js": "^7.4.47",
 		"@rushstack/eslint-patch": "^1.3.3",
