--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.2.0",
+	"version": "1.2.1",
 	"private": true,
-	"author": "",
+	"author": "ls",
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
