--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.3.1",
+	"version": "1.3.2",
 	"private": true,
 	"author": "ls",
 	"license": "MIT",
@@ -57,6 +57,7 @@
 		"terser": "^5.30.3",
 		"typescript": "~5.4.0",
 		"unplugin-auto-import": "^0.17.5",
+		"unplugin-element-plus": "^0.8.0",
 		"unplugin-icons": "^0.18.5",
 		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.1.6",
