--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.3.7",
+	"version": "1.3.8",
 	"private": true,
 	"author": "ls",
 	"license": "MIT",
@@ -48,6 +48,7 @@
 		"eslint": "^8.49.0",
 		"eslint-plugin-vue": "^9.17.0",
 		"less": "^4.2.0",
+		"naive-ui": "^2.38.2",
 		"npm-run-all2": "^6.1.2",
 		"postcss-modules": "^6.0.0",
 		"postcss-prefixer": "^3.0.0",
@@ -60,6 +61,7 @@
 		"unplugin-element-plus": "^0.8.0",
 		"unplugin-icons": "^0.18.5",
 		"unplugin-vue-components": "^0.26.0",
+		"vfonts": "^0.0.3",
 		"vite": "^5.1.6",
 		"vite-plugin-monkey": "^3.5.2",
 		"vite-plugin-vue-devtools": "^7.0.26",
