1.新增 UI 测试页面;2.将`方案编辑器`的`Tree`组件更改为`NaiveUI`的`Tree`组件;3.修复部分样式 bug

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,6 @@
 			"@/*": ["./src/*"],
 			"@svg/*": ["./src/assets/svg/*"]
 		},
-		"types": ["element-plus/global"]
+		"types": ["element-plus/global", "naive-ui/volar", "@varlet/ui/types"]
 	}
 }
