--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.3.11",
+	"version": "1.3.12",
 	"private": true,
 	"author": "ls",
 	"license": "MIT",
@@ -32,6 +32,7 @@
 		"@iconify-json/ant-design": "^1.1.16",
 		"@iconify-json/ep": "^1.1.11",
 		"@iconify-json/material-symbols": "^1.1.80",
+		"@iconify-json/mdi": "^1.1.66",
 		"@mdi/font": "^7.4.47",
 		"@mdi/js": "^7.4.47",
 		"@rushstack/eslint-patch": "^1.3.3",
@@ -55,6 +56,7 @@
 		"postcss-preset-env": "^9.5.5",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"sass": "^1.75.0",
+		"seemly": "^0.3.8",
 		"terser": "^5.30.3",
 		"typescript": "~5.4.0",
 		"unplugin-auto-import": "^0.17.5",
