--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.3.13",
+	"version": "1.4.0",
 	"private": true,
 	"author": "ls",
 	"license": "MIT",
@@ -33,6 +33,7 @@
 		"@iconify-json/ep": "^1.1.11",
 		"@iconify-json/material-symbols": "^1.1.80",
 		"@iconify-json/mdi": "^1.1.66",
+		"@iconify/vue": "^4.1.2",
 		"@mdi/font": "^7.4.47",
 		"@mdi/js": "^7.4.47",
 		"@rushstack/eslint-patch": "^1.3.3",
@@ -42,6 +43,7 @@
 		"@types/node": "^20.12.7",
 		"@varlet/import-resolver": "^3.2.3",
 		"@varlet/touch-emulator": "^3.2.3",
+		"@vicons/ionicons5": "^0.12.0",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vue/eslint-config-typescript": "^12.0.0",
 		"@vue/tsconfig": "^0.5.1",
