--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.4.4",
+	"version": "1.4.5",
 	"private": true,
 	"author": "ls",
 	"license": "MIT",
@@ -67,7 +67,7 @@
 		"unplugin-vue-components": "^0.26.0",
 		"vfonts": "^0.0.3",
 		"vite": "^5.1.6",
-		"vite-plugin-monkey": "^3.5.2",
+		"vite-plugin-monkey": "4.0.3",
 		"vite-plugin-vue-devtools": "^7.0.26",
 		"vite-plugin-vuetify": "^2.0.3",
 		"vite-svg-loader": "^5.1.0",
