✨ feat(新增**收藏仓库**和**收藏页面**):
新增收藏页面(利用 `indexDB` 实现)\n新增**收藏仓库**,用于管理用户收藏的卡片仓库,收藏数据均存入`indexDB`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.4.7",
+	"version": "1.4.8",
 	"private": true,
 	"author": "ls",
 	"license": "MIT",
@@ -22,6 +22,7 @@
 		"file-saver": "^2.0.5",
 		"gsap": "^3.12.5",
 		"jszip": "3.7.1",
+		"localforage": "^1.10.0",
 		"lodash": "^4.17.21",
 		"pinia": "^2.1.7",
 		"vue": "^3.4.21",
