[1.4.9]✨ feat(**图库**、**APP Bar**):
**图库**的工具栏新增**重新加载**按钮和**收藏选中**按钮\n**APP Bar**新增呢当前脚本版本显示

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,7 @@
 		"cypress.config.*",
 		"nightwatch.conf.*",
 		"playwright.config.*",
-		"*.config.*"
+		"monkey.config.*"
 	],
 	"compilerOptions": {
 		"composite": true,
