[1.4.17] 涉及从链接提取卡片名称的操作将进行 url 解码

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.4.16",
+	"version": "1.4.17",
 	"private": true,
 	"author": "ls",
 	"license": "MIT",
+	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "run-p type-check \"build-only {@}\" --",
