[1.4.18] 1.关键词过滤支持对标签进行过滤; 2.优化拖拽窗口组件

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,10 @@
 			"@/*": ["./src/*"],
 			"@svg/*": ["./src/assets/svg/*"]
 		},
-		"types": ["element-plus/global", "naive-ui/volar", "@varlet/ui/types"]
+		"types": [
+			"element-plus/global",
+			"naive-ui/volar",
+			"@varlet/ui/types"
+		]
 	}
 }
