--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@element-plus/icons-vue": "^2.3.1",
 		"@fancyapps/ui": "^5.0.35",
 		"@varlet/ui": "^3.2.3",
+		"@vueuse/components": "^10.11.0",
 		"@vueuse/core": "^10.9.0",
 		"element-plus": "^2.7.1",
 		"file-saver": "^2.0.5",
