--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "WebImgCollector2",
-	"version": "1.4.18",
+	"version": "1.4.19",
 	"private": true,
 	"author": "ls",
 	"license": "MIT",
@@ -50,6 +50,7 @@
 		"@vue/eslint-config-typescript": "^12.0.0",
 		"@vue/tsconfig": "^0.5.1",
 		"autoprefixer": "^10.4.19",
+		"default-passive-events": "^2.0.0",
 		"eslint": "^8.49.0",
 		"eslint-plugin-vue": "^9.17.0",
 		"less": "^4.2.0",
